Fixed Overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,10 @@
   scrollbar-gutter: stable;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
